Se toma el año de consulta del parámetro 026

--- a/BusquedaSimple.xaml
+++ b/BusquedaSimple.xaml
@@ -205,7 +205,7 @@
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <ui:SelectItem ContinueOnError="{x:Null}" DelayAfter="{x:Null}" DelayBefore="{x:Null}" DisplayName="Select Item 'SELECT  selYearSelect'" sap:VirtualizedContainerService.HintSize="388,135" sap2010:WorkflowViewState.IdRef="SelectItem_1" Item="[in_Config(&quot;ANIO_CONSULTA&quot;).ToString]">
+                <ui:SelectItem ContinueOnError="{x:Null}" DelayAfter="{x:Null}" DelayBefore="{x:Null}" DisplayName="Select Item 'SELECT  selYearSelect'" sap:VirtualizedContainerService.HintSize="388,135" sap2010:WorkflowViewState.IdRef="SelectItem_1" Item="[in_Config(&quot;026&quot;).ToString]">
                   <ui:SelectItem.Items>
                     <scg:List x:TypeArguments="x:String" Capacity="16">
                       <x:String>Seleccione</x:String>
